# vstreamer

./: CMakeLists.txt  vsm.conf
cmake/: FindLibav.cmake  vstreamer_common.cmake
doc/: default.conf  header.tex
doc/pages/: _1_user_guide.dox  _2_disclaimer.dox
include/platform/linux/ugcs/vstreamer/: platform_sockets.h  platform_video.h
include/platform/mac/ugcs/vstreamer/: platform_sockets.h  platform_video.h
include/platform/win/ugcs/vstreamer/: platform_sockets.h  platform_video.h
include/ugcs/vstreamer/: base_cap.h  base_save.h  common.h  control_server.h  ffmpeg_cap.h  ffmpeg_playback.h  ffmpeg_save_flv.h  ffmpeg_save_mjpeg.h  ffmpeg_utils.h  http_generic_server.h  mjpeg_server.h  opencv_cap.h  sockets.h  utils.h  video.h  video_device.h
src/: base_save.cpp  control_server.cpp  ffmpeg_cap.cpp  ffmpeg_playback.cpp  ffmpeg_save_flv.cpp  ffmpeg_save_mjpeg.cpp  ffmpeg_utils.cpp  http_generic_server.cpp  main.cpp  mjpeg_server.cpp  opencv_cap.cpp  sockets.cpp  utils.cpp  video.cpp  video_device.cpp
src/json/: json_reader.cpp
src/platform/linux/: ffmpeg_utils.cpp  sockets.cpp  video.cpp
src/platform/mac/: ffmpeg_utils.cpp  sockets.cpp  video.cpp
src/platform/unix/: sockets.cpp
src/platform/win/: ffmpeg_utils.cpp  sockets.cpp  video.cpp
